# update-aws-cred

./: Cargo.toml  README.md
src/: main.rs
